--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,6 @@
 %p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password. You can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+  #{@resource.email}　様
+%p 下記のURLよりパスワードの再設定をお願いします。
+%p= link_to 'パスワード再設定', edit_password_url(@resource, reset_password_token: @token)
+
+%p 本メールは「secondapp_stocksrecords」より自動配信されております。
