--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,19 +1,13 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    %br/
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-      %br/
-    = f.password_field :password, autofocus: true, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Change my password"
-= render "devise/shared/links"
+.authform
+  = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
+    %h3 パスワードの再設定
+    = devise_error_messages!
+    = f.hidden_field :reset_password_token
+    .form-group
+      = f.label :password, '新しいパスワード'
+      (#{@minimum_password_length}文字以上)
+      = f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control'
+      = f.label :password_confirmation, '新しいパスワード'
+      (確認用)
+      = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
+    = f.submit '変更する', :class => 'button right'
