--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -1,8 +1,9 @@
-%h1 Stocks#index
-%p
-  ようこそ
-  = link_to "#{@nickname}", edit_user_registration_path
-  様
-%p
-  
-  = link_to "ログアウト", destroy_user_session_path, method: "delete"
+.wrapper
+  .side-bar
+    .side-bar__top-item
+      ようこそ
+      = link_to "#{@nickname}", edit_user_registration_path
+      様
+      = link_to "ログアウト", destroy_user_session_path, method: "delete"
+  .main-screen
+    これはメインに入る
