--- a/app/assets/stylesheets/stocks.scss
+++ b/app/assets/stylesheets/stocks.scss
@@ -1,3 +1,21 @@
-// Place all the styles related to the stocks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.wrapper{
+  width:100%;
+  height:100vh;
+  display:flex;
+}
+
+.side-bar{
+  background-color: #FFFF00;
+  width:20%;
+  height:100%;
+  &__top-item{
+    height:20%;
+    background-color: #0000FF;
+  }
+}
+
+.main-screen{
+  background-color: #00FFFF;
+  width:80%;
+  height:100%;
+}
