--- a/app/assets/stylesheets/stocks.scss
+++ b/app/assets/stylesheets/stocks.scss
@@ -2,20 +2,29 @@
   width:100%;
   height:100vh;
   display:flex;
+  color:#ffffff;
 }
 
 .side-bar{
   background-color: #FFFF00;
-  width:20%;
+  width:15%;
   height:100%;
   &__top-item{
-    height:20%;
+    height:8%;
     background-color: #0000FF;
   }
 }
 
 .main-screen{
   background-color: #00FFFF;
-  width:80%;
+  width:85%;
   height:100%;
+  &__header{
+    height:8%;
+    background-color: red;
+  }
+  &__contents{
+    height:92%;
+    background-color: green;
+  }
 }
