--- a/app/views/stocks/_stocks.html.haml
+++ b/app/views/stocks/_stocks.html.haml
@@ -1,5 +1,5 @@
 .main-screen
   .main-screen__header
-    これはヘッダー
+    = render "header"
   .main-screen__contents
-    これはメインに入る
+    登録した銘柄と、その状況が表示(項目:チャート、価格、損益)
