--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -1,6 +1,10 @@
 // import the CSS framework
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@font-face {
+  font-family: 'Noto Serif JP', serif;
+  src: url('https://fonts.googleapis.com/css?family=Noto+Serif+JP:400,900&display=swap&subset=japanese') format("woff");
+}
 
 // make all images responsive by default
 img {
