--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -1,30 +1,81 @@
+@font-face {
+  font-family: 'Noto Serif JP', serif;
+  src: url('https://fonts.googleapis.com/css?family=Noto+Serif+JP:400,900&display=swap&subset=japanese') format("woff");
+}
+
+$headercolor:#eeeeee;
+$contentscolor:#EDE1D5;
+$text-color:#444444;
+
 .wrapper{
+  font-family: 'Noto Serif JP', serif;
   width:100%;
   height:100vh;
   display:flex;
-  color:#ffffff;
+  color:$text-color;
 }
 
 .side-bar{
-  background-color: #FFFF00;
+  border-right:1px solid #999;
   width:15%;
   height:100%;
   &__top-item{
-    height:8%;
-    background-color: #0000FF;
+    height:50px;
+    background-color: $headercolor;
+    border-bottom: 5px solid #808080;
+    &--welcome{
+      text-align:right;
+      padding:3px 5px;
+    }
+  }
+  &__search-window{
+    overflow: scroll;
+    background-color: $contentscolor;
+    width:100%;
+    height:calc(100% - 50px);
   }
 }
 
+a{
+  text-decoration: none;
+  color:#3453cc;
+  font-weight: bold;
+}
+
+a.header-menu{
+  display:block;
+  width:108px;
+  text-decoration: none;
+  font-weight: bold;
+  color:$text-color;
+  font-size:16px;
+}
+
+ul.main-screen{
+  display: flex;
+  padding:0;
+  width:100%;
+}
+
+li.main-screen{
+  height:47px;
+  line-height: 50px;
+  list-style:none;
+  text-align: center;
+  border-right: 1px solid #55669E;
+  width: 10%;
+}
 .main-screen{
-  background-color: #00FFFF;
   width:85%;
   height:100%;
   &__header{
-    height:8%;
-    background-color: red;
+    height:50px;
+    background-color: $headercolor;
+    border-bottom: 5px solid #808080;
   }
   &__contents{
-    height:92%;
-    background-color: green;
+    height:calc(100% - 50px);
+    background-color: $contentscolor;
+    overflow: scroll;
   }
 }
