--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -14,28 +14,9 @@ $text-color:#444444;
   display:flex;
   color:$text-color;
 }
-
-.side-bar{
-  border-right:1px solid #999;
-  width:15%;
-  height:100%;
-  &__top-item{
-    height:50px;
-    background-color: $headercolor;
-    border-bottom: 5px solid #808080;
-    &--welcome{
-      text-align:right;
-      padding:3px 5px;
-    }
-  }
-  &__search-window{
-    overflow: scroll;
-    background-color: $contentscolor;
-    width:100%;
-    height:calc(100% - 50px);
-  }
+p.logout{
+  margin-bottom:5px;
 }
-
 a{
   text-decoration: none;
   color:#3453cc;
@@ -44,11 +25,19 @@ a{
 
 a.header-menu{
   display:block;
-  width:108px;
+  width:130px;
   text-decoration: none;
   font-weight: bold;
   color:$text-color;
   font-size:16px;
+  &__title{
+    width:255px;
+    font-size:20px;
+    line-height: 50px;
+  }
+  &__signup{
+    font-size:14px;
+  }
 }
 
 ul.main-screen{
@@ -58,15 +47,28 @@ ul.main-screen{
 }
 
 li.main-screen{
-  height:47px;
+  height:50px;
   line-height: 50px;
   list-style:none;
   text-align: center;
   border-right: 1px solid #55669E;
-  width: 10%;
+  width: 130px;
+  &__title{
+    width:255px;
+    font-size:20px;
+    line-height: 47px;
+  }
+  &--logout{
+    background-color: #999;
+  }
+  &__user-name{
+    text-align:right;
+    list-style: none;
+    width:350px;
+  }
 }
 .main-screen{
-  width:85%;
+  width:100%;
   height:100%;
   &__header{
     height:50px;
