--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,7 +13,7 @@
         %div
           Currently waiting confirmation for: #{resource.unconfirmed_email}
     %fieldset
-      %p パスワードを変更しない場合は入力しないでください
+      %p.sign パスワード変更(変更しない場合は空欄)
       .form-group
         = f.label :password,'変更後のパスワード'
         = f.password_field :password, :autocomplete => 'off', class: 'form-control'
@@ -21,12 +21,13 @@
         = f.label :password_confirmation
         = f.password_field :password_confirmation, class: 'form-control'
     %fieldset
-      %p 変更するにはパスワードの入力が必要です
+      %p.sign 変更するにはパスワードの入力が必要です
       .form-group
         = f.label :current_password
         = f.password_field :current_password, class: 'form-control'
-    = f.submit '変更', :class => 'button right'
+    .button-clear
+      = f.submit '変更', :class => 'button'
 .authform
-  %h3 アカウントの削除
-  %p クリックするとアカウントを削除します
-  = button_to "アカウントを削除", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right'
+  %h4 アカウントの削除
+  .button-clear
+    = button_to "アカウントを削除", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button'
