--- a/app/views/stocks/_stocks.html.haml
+++ b/app/views/stocks/_stocks.html.haml
@@ -2,3 +2,18 @@
   .main-screen__header
     = render "header"
   .main-screen__contents
+    .map-set
+    - if user_signed_in?
+      = form_with url: root_path do |f|
+        .map-set__search-window
+          .form-just
+            = f.text_field :name,id:'search',value:'南海なんば駅周辺のカフェ'
+            = f.submit '検索',id:'search-button',onclick:'SearchGo()'
+    - else
+      = form_with url: root_path do |f|
+        .map-set__search-window
+          .form-just
+            = f.text_field :name,id:'search',value:'南海なんば駅周辺のカフェ'
+            = f.submit '検索',id:'search-button',onclick:'SearchGo()'
+    #gmap
+      %script{src: 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCeQaV6N4Wu-8xgQtXhzy6HWQCmV218iaM&callback=initMap&libraries=places'}
