--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -81,3 +81,38 @@ li.main-screen{
     overflow: scroll;
   }
 }
+
+.map-set{
+  width:100%;
+  margin:10px auto;
+  &__search-window{
+    margin:auto;
+    height:35px;
+    width:50%;
+    margin-bottom:5px;
+  }
+}
+.form-just{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 50px;
+  height:100%;
+}
+
+#search{
+  height:28px;
+  width:75%;
+}
+
+#gmap{
+  width:750px;
+  height:500px;
+  margin:auto;
+}
+
+#search-button{
+  margin:0 auto;
+    width:90px;
+    padding:25px;
+}
