--- a/app/views/stocks/_header.html.haml
+++ b/app/views/stocks/_header.html.haml
@@ -1,6 +1,6 @@
 %ul{class:'main-screen'}
   %li{class:'main-screen main-screen__title'}
-    = link_to "駐車場検索アプリ",root_path,class:'header-menu header-menu__title'
+    = link_to "どこそこ検索アプリ",root_path,class:'header-menu header-menu__title'
   %li{class:'main-screen'}
     %a{class:'header-menu',href:'#'}
       検索設定
