--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -64,7 +64,9 @@ li.main-screen{
   &__user-name{
     text-align:right;
     list-style: none;
-    width:350px;
+    position: absolute;
+    top:10px;
+    right:5px;
   }
 }
 .main-screen{
