--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -7,6 +7,10 @@ $headercolor:#eeeeee;
 $contentscolor:#EDE1D5;
 $text-color:#444444;
 
+.header{
+  padding-top:55px;
+}
+
 .wrapper{
   font-family: 'Noto Serif JP', serif;
   width:100%;
@@ -65,8 +69,8 @@ li.main-screen{
     text-align:right;
     list-style: none;
     position: absolute;
-    top:10px;
-    right:5px;
+    right:0;
+    top:5px;
   }
 }
 .main-screen{
@@ -74,11 +78,17 @@ li.main-screen{
   height:100%;
   &__header{
     height:50px;
+    width:100%;
     background-color: $headercolor;
     border-bottom: 5px solid #808080;
+    position: fixed;
+    top:0;
+    left:0;
+    display: block;
+    z-index: 1;
   }
   &__contents{
-    height:calc(100% - 50px);
+    height:100vh;
     background-color: $contentscolor;
     overflow: scroll;
   }
