--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,9 @@
     %style @import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP:400,900&display=swap&subset=japanese');
     = csrf_meta_tags
   %body
-    = yield
+  .wrapper
+    .main-screen
+      .main-screen__header
+        = render "stocks/header"
+      .header
+        = yield
