--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -112,6 +112,41 @@ li.main-screen{
   height:100%;
 }
 
+/* ここから検索履歴 */
+.show-result{
+  width:550px;
+  height:100vh;
+  margin:20px auto;
+}
+
+table,tr,td{
+  border:1px solid;
+  line-height: 25px;
+}
+h1.show-result__title{
+  line-height: 35px;
+  text-align: center;
+}
+
+td.history{
+  width:500px;
+}
+
+td.destroy{
+  width:50px;
+  text-align: center;
+}
+
+.textcenter{
+  text-align: center;
+  margin:15px;
+}
+
+.search-show-result{
+  margin-top: 10px;
+}
+
+
 #search{
   height:28px;
   width:75%;
