--- a/app/views/stocks/_header.html.haml
+++ b/app/views/stocks/_header.html.haml
@@ -1,12 +1,9 @@
 %ul{class:'main-screen'}
   %li{class:'main-screen main-screen__title'}
-    = link_to "どこそこ検索アプリ",root_path,class:'header-menu header-menu__title'
+    = link_to "スポット検索アプリ",root_path,class:'header-menu header-menu__title'
     - if user_signed_in?
       %li{class:'main-screen'}
-        = link_to 'My検索',spots_path,class:'header-menu'
-  %li{class:'main-screen'}
-    %a{class:'header-menu',href:'/'}
-      検索履歴
+        = link_to '検索履歴',"/stocks/#{current_user.id}",class:'header-menu'
   %li{class:'main-screen'}
     - if user_signed_in?
       = link_to "ログアウト", destroy_user_session_path, method: "delete",class:'header-menu'
