--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -5,5 +5,4 @@
         .form-just
           = f.text_field :name,id:'search',value:'南海なんば駅周辺のカフェ'
           = f.submit '検索',id:'search-button',onclick:'SearchGo()'
-    #gmap
-      %script{src: 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCeQaV6N4Wu-8xgQtXhzy6HWQCmV218iaM&callback=initMap&libraries=places'}
+  = render '/shared/map'
