--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %title= content_for?(:title) ? yield(:title) : 'Spot Search'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Stocks App'}"}
     = stylesheet_link_tag    'application', media: 'all'
+    = include_gon
     = javascript_include_tag 'application'
     %style @import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP:400,900&display=swap&subset=japanese');
     = csrf_meta_tags
