--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,6 @@
   .wrapper
     .main-screen
       .main-screen__header
-        = render "stocks/header"
+        = render "shared/header"
       .header
         = yield
