--- a/app/assets/stylesheets/partials/stocks.scss
+++ b/app/assets/stylesheets/partials/stocks.scss
@@ -18,61 +18,6 @@ $text-color:#444444;
   display:flex;
   color:$text-color;
 }
-p.logout{
-  margin-bottom:5px;
-}
-a{
-  text-decoration: none;
-  color:#3453cc;
-  font-weight: bold;
-}
-
-a.header-menu{
-  display:block;
-  width:130px;
-  text-decoration: none;
-  font-weight: bold;
-  color:$text-color;
-  font-size:16px;
-  &__title{
-    width:255px;
-    font-size:20px;
-    line-height: 50px;
-  }
-  &__signup{
-    font-size:14px;
-  }
-}
-
-ul.main-screen{
-  display: flex;
-  padding:0;
-  width:100%;
-}
-
-li.main-screen{
-  height:50px;
-  line-height: 50px;
-  list-style:none;
-  text-align: center;
-  border-right: 1px solid #55669E;
-  width: 130px;
-  &__title{
-    width:255px;
-    font-size:20px;
-    line-height: 47px;
-  }
-  &--logout{
-    background-color: #999;
-  }
-  &__user-name{
-    text-align:right;
-    list-style: none;
-    position: absolute;
-    right:0;
-    top:5px;
-  }
-}
 .main-screen{
   width:100%;
   height:100%;
@@ -103,6 +48,12 @@ li.main-screen{
     width:50%;
     margin-bottom:5px;
   }
+  &__research{
+    width:60%;
+    margin:auto;
+    padding:10px;
+    display:flex;
+  }
 }
 .form-just{
   display:flex;
@@ -110,58 +61,4 @@ li.main-screen{
   align-items: center;
   line-height: 50px;
   height:100%;
-}
-
-/* ここから検索履歴 */
-.show-result{
-  width:350px;
-  height:100vh;
-  margin:20px auto;
-}
-
-table,tr,td{
-  border:1px solid;
-  line-height: 25px;
-}
-h1.show-result__title{
-  line-height: 35px;
-  text-align: center;
-}
-
-td.history{
-  width:300px;
-  padding-left:7px;
-}
-
-td.destroy{
-  width:50px;
-  text-align: center;
-}
-
-.show-result__deatils{
-  text-align: center;
-  margin:15px;
-  font-size:24px;
-}
-
-.search-show-result{
-  margin-top: 10px;
-}
-
-
-#search{
-  height:28px;
-  width:75%;
-}
-
-#gmap{
-  width:750px;
-  height:500px;
-  margin:auto;
-}
-
-#search-button{
-  margin:0 auto;
-    width:90px;
-    padding:25px;
 }
