--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
 @import "reset";
 @import "signcs";
-@import "partials/*";
+@import "partials/stocks";
+@import "partials/map";
+@import "partials/result";
